<resources>
    <string name="app_name">Ermolaev SHIFT App</string>
    <string name="hint_name_input_field">Enter your name</string>
    <string name="hint_password_input_field">Enter password</string>
    <string name="btn_to_register_text">Register</string>
    <string name="btn_enter_text">Enter</string>
    <string name="condition_percent">Percent: %s</string>
    <string name="condition_period">Period: %s</string>
    <string name="condition_max_amount">Max amount: %s</string>
    <string name="label_loan_conditions">Loan terms:</string>
    <string name="welcome_text_view">Welcome, %s!</string>
    <string name="hint_percent_et">Enter percentage</string>
    <string name="hint_period_et">Enter period</string>
    <string name="hint_amount_et">Enter the amount</string>
    <string name="button_create_loan">Apply for a loan</string>
    <string name="hint_phone_number_et">Enter your phone number</string>
    <string name="hint_name_et">Enter your first name</string>
    <string name="hint_last_name_et">Enter your last name</string>
    <string name="button_my_loans">My loans</string>
    <string name="loan_date">Date of registration: %s</string>
    <string name="loan_status">Loan status: %s</string>
    <string name="loan_amount_in_item">%s rub.</string>
    <string name="loan_id">Loan №: %s</string>
    <string name="loan_first_name">First name: %s</string>
    <string name="loan_last_name">Last name: %s</string>
    <string name="loan_percent">Loan percentage: %s</string>
    <string name="loan_period">Period, in days: %s</string>
    <string name="loan_amount">Loan amount, in rubles: %s</string>
    <string name="loan_phone_number">Phone number: %s</string>
    <string name="loan_information">For more information, please contact the nearest CFT office</string>
    <string name="message_you_have_no_loans">You do not have any loans at the moment</string>
    <string name="snackbar_action_text">Reload</string>
    <string name="terms_of_filling">All fields must be filled in, only a percentage can be fractional, fields must not contain spaces, name and lastname must not contain numbers</string>
    <string name="localization_button_text">EN</string>
    <string name="notification_title">Important notice</string>
    <string name="notification_text">Remember to pay your loans on time</string>
    <string name="loan_successfully_created">Loan №%s has been successfully completed</string>
    <string name="registration_success">Registration was successful. Your access level is: %s</string>
    <string name="error_user_already_exist">User with this login already exists</string>
    <string name="error_failure_registration">Failed to register user</string>
    <string name="error_empty_input_data">All fields must be filled</string>
    <string name="unknown_error_check_internet_connection">Unknown error. Check your internet connection</string>
    <string name="error_wrong_password_or_user_not_exist">Invalid password or user with this login does not exist</string>
    <string name="error_failure_authorization">Authorization failed</string>
    <string name="error_failure_get_loans_list">Failed to get the list of loans from the server</string>
    <string name="error_failure_get_loan_conditions">Failed to get loan conditions from server</string>
    <string name="error_inconsistency_with_conditions">Inconsistency of the desired loan conditions with the available ones</string>
    <string name="error_failure_create_loan">Loan failed</string>
    <string name="error_incorrect_input_data">Some of the fields are filled in incorrectly, please read carefully the conditions for filling in the fields</string>
</resources>